[package]
name = "payment_processor"
version = "0.1.0"
authors = ["Caleb Hill <foamcactus@protoncactus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.10.3"
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.3"

